--- a/style.css
+++ b/style.css
@@ -53,10 +53,13 @@ body {
 }
 
 .next, .prev {
-    background: url("naxt.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    height: 200px;
-    width: 100%;
+    background: url("naxt.png") no-repeat scroll 0 0 transparent;
+    height: 208px;
+    margin: 9px;
+    max-width: 90px;
     opacity: 0.4;
+    padding: 3px;
+    width: 100%;
 }
 
 .next:hover, .prev:hover {
@@ -67,4 +70,76 @@ body {
 
 .prev {
     background: url("naxt.png") no-repeat scroll -94px 0 rgba(0, 0, 0, 0);
+}
+
+#admin_content {
+    width: 100%;
+}
+
+#admin_pano {
+    margin: 200px;
+    width: 600px;
+    float: left;
+}
+
+#admin_change {
+    border: 2px solid;
+    float: right;
+    height: 100%;
+    margin: 70px;
+    min-height: 500px;
+    width: 50%;
+}
+
+.rows {
+    border: 2px solid;
+    display: inline-table;
+    height: 100px;
+    margin: 20px;
+    width: 100px;
+}
+
+#rowchange {
+    width: 450px;
+    overflow: hidden;
+}
+
+.blue {
+    background-color: deepskyblue;
+}
+
+#startrow {
+    background-image: url("row.png");
+    background-position: 15px 32px;
+    background-repeat: no-repeat;
+}
+
+#finishrow {
+    background: url("row.png");
+    background-position: 18px -53px;
+    background-repeat: no-repeat;
+}
+
+#train {
+    background: url("row.png");
+    background-position: 18px -10px;
+    background-repeat: no-repeat;
+}
+
+#treerowleft {
+    background: url("row.png");
+    background-position: -153px -2px;
+    background-repeat: no-repeat;
+}
+
+#treerowright {
+    background: url("row.png");
+    background-position: -261px 0;
+    background-repeat: no-repeat;
+}
+
+#forrow {
+    background: url("row.png");
+    background-position: -356px 0;
+    background-repeat: no-repeat;
 }
