--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .next, .prev {
-    background: url("naxt.png") no-repeat scroll 0 0 transparent;
+    background: url("images/naxt.png") no-repeat scroll 0 0 transparent;
     height: 208px;
     margin: 9px;
     max-width: 90px;
@@ -69,7 +69,7 @@ body {
 }
 
 .prev {
-    background: url("naxt.png") no-repeat scroll -94px 0 rgba(0, 0, 0, 0);
+    background: url("images/naxt.png") no-repeat scroll -94px 0 rgba(0, 0, 0, 0);
 }
 
 #admin_content {
@@ -109,37 +109,37 @@ body {
 }
 
 #startrow {
-    background-image: url("row.png");
+    background-image: url("images/row.png");
     background-position: 15px 32px;
     background-repeat: no-repeat;
 }
 
 #finishrow {
-    background: url("row.png");
+    background: url("images/row.png");
     background-position: 18px -53px;
     background-repeat: no-repeat;
 }
 
 #train {
-    background: url("row.png");
+    background: url("images/row.png");
     background-position: 18px -10px;
     background-repeat: no-repeat;
 }
 
 #treerowleft {
-    background: url("row.png");
+    background: url("images/row.png");
     background-position: -153px -2px;
     background-repeat: no-repeat;
 }
 
 #treerowright {
-    background: url("row.png");
+    background: url("images/row.png");
     background-position: -261px 0;
     background-repeat: no-repeat;
 }
 
 #forrow {
-    background: url("row.png");
+    background: url("images/row.png");
     background-position: -356px 0;
     background-repeat: no-repeat;
 }
